# MNIST_Recognition

./: README.md
GUI/log/: 128-128-0_03-1_0e(-12)-1_0e(-10)-100-5-test.txt  128-128-0_03-1_0e(-12)-1_0e(-10)-100-5-train.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-1-test.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-1-train.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-2-test.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-2-train.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-3-test.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-3-train.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-4-test.txt  128-128-0_1-1_0e(-12)-1_0e(-10)-100-4-train.txt  2023-03-03_233912.txt  20230303234249.txt  20230305142424.txt  20230305142639.txt  20230305143324.txt  20230306141335.txt  20230306173600.txt  20230307090703.txt  2023228181456.txt  202322818161.txt  2023228181655.txt  2023228182036.txt  2023228183257.txt  2023228183433.txt  202322818458.txt  2023228185024.txt  2023228185325.txt  2023228185453.txt  2023228185620.txt  202322818576.txt  2023228191745.txt  2023228192624.txt  202322819310.txt  202322819839.txt  202322819936.txt  202322822305.txt  2023228225315.txt  2023228225934.txt  2023228231454.txt  202322823531.txt  (+33 more)
MLP/: BmpDigitRecognition.cpp  BmpDigitRecognition.h  CMakeLists.txt  Define.cpp  Define.h  MLP.cpp  MLP.h  main.cpp
source/: library.cpp  library.h
source/include/: BmpDigitRecognition.cpp  BmpDigitRecognition.h  Define.cpp  Define.h  MLP.cpp  MLP.h  matplotlibcpp.h  myThread.cpp  myThread.h
source/src/: ImageMLP.cpp  ImageMLP.h  MLP.cpp  MLP.h  MachineLearning.h  Machine_Learning_Math.cpp  (+3 more)
